--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Personal Card"
     />
-    <title>Business Card</title>
+    <title>Personal Card</title>
   </head>
   <body>
     <div id="root"></div>
